2006-04-07  Jorge Gonzalez  <jorge.gonzalez@artica.es>

	* godmode/agentes/agent_template.php,
	godmode/agentes/module_manager_editor_data.php,
	godmode/agentes/module_manager_editor_network.php,
	godmode/agentes/module_manager_editor_wmi.php,
	godmode/agentes/module_manager_editor_plugin.php,
	godmode/agentes/module_manager_editor.php,
	godmode/agentes/module_manager_editor_prediction.php: Removed warning
	messages, and fixed mdoule_type errors.

2008-04-05  Sancho Lerena <slerena@gmail.com>

	* pandoradb.sql: New header.

	* pandoradb_data.sql: Removed /**/ comments, due problems with
	installer.

	* install.php: Updated installer for 2.0 version.

	* functions.php: Fix small problem in pandora_help() with icon.

	* estado_alertas.php: Do not show header "combined alert" if there
	is no complex alerts.

	* reporting_viewer.php: Round data for monitor SLA report.

2008-04-04  Jorge Gonzalez  <jorge.gonzalez@artica.es>

	* godmode/agentes/module_manager_editor_data.php,
	godmode/agentes/module_manager_editor_network.php,
	godmode/agentes/module_manager_editor_wmi.php,
	godmode/agentes/configurar_agente.php,
	godmode/agentes/module_manager_editor_plugin.php,
	godmode/agentes/module_manager_editor_prediction.php: Removed warning
	messages due a lack of a variable in configurar_agente.php

2008-04-03  Jorge Gonzalez  <jorge.gonzalez@artica.es>

	* include/functions_db.php: New functions added to handle plugins and
	export servers.
	
	* include/languages/language_en.php: Updated English translation file.
	
	* general/header.php: Updated header.

	* godmode/agentes/manage_config.php,
	godmode/agentes/module_manager_editor_data.php,
	godmode/agentes/module_manager_editor_network.php,
	godmode/agentes/module_manager.php,
	godmode/agentes/modificar_agente.php,
	godmode/agentes/module_manager_editor_wmi.php,
	godmode/agentes/configurar_agente.php,
	godmode/agentes/module_manager_editor_plugin.php,
	godmode/agentes/module_manager_editor.php,