@@ -1,2 +1,3 @@
 Sancho Lerena <slerena@gmail.com>
+Jorge Gonzalez <jorge.gonzalez@artica.es>
 Raul Mateos <raulofpandora@gmail.com>
